Fix for sticky footers.  Had to wrap the main content in a #wrap div and move a few styles around.  Seems to be working everywhere.

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -47,17 +47,28 @@ table {
 --------------------------------------------- */
 
 html {
-  min-height: 100%;
+  height: 100%;
   overflow-y: scroll;
 }
 
 body {
   color: #444;
   font: 12px/1.5 "Helvetica Neue", Arial, sans-serif;
+  height: 100%;
+  overflow: visible;
+}
+
+#wrap {
+  min-height: 100%;
   overflow-x: hidden;
 }
 
-.green {
+#main {
+  overflow: visible;
+	padding-bottom: 275px;  /* must be same height as the footer (including paddings), took off 5px for overlap of #tabs bottom */
+}
+
+.green #wrap {
   background: #e8f4e3 url(../img/cross.png);
   background: url(../img/pixels.png) repeat-x, url(../img/cross.png), -moz-linear-gradient(top, #72cb47, #e8f4e3 62%);
   background: url(../img/pixels.png) repeat-x, url(../img/cross.png), -ms-linear-gradient(top, #72cb47, #e8f4e3 62%);
@@ -67,7 +78,7 @@ body {
   background: url(../img/pixels.png) repeat-x, linear-gradient(top, #72cb47, #e8f4e3 62%);
 }
 
-.pink {
+.pink #wrap {
   background: #f4e3ed url(../img/cross.png);
   background: url(../img/pixels.png) repeat-x, url(../img/cross.png), -moz-linear-gradient(top, #e52b6d, #f4e3ed 62%);
   background: url(../img/pixels.png) repeat-x, url(../img/cross.png), -ms-linear-gradient(top, #e52b6d, #f4e3ed 62%);
@@ -77,7 +88,7 @@ body {
   background: url(../img/pixels.png) repeat-x, url(../img/cross.png), linear-gradient(top, #e52b6d, #f4e3ed 62%);
 }
 
-.blue {
+.blue #wrap {
   background: #e4f3ff url(../img/cross.png);
   background: url(../img/pixels.png) repeat-x, url(../img/cross.png), -moz-linear-gradient(top, #3a9bee, #e4f3ff 62%);
   background: url(../img/pixels.png) repeat-x, url(../img/cross.png), -ms-linear-gradient(top, #3a9bee, #e4f3ff 62%);
@@ -87,7 +98,7 @@ body {
   background: url(../img/pixels.png) repeat-x, url(../img/cross.png), linear-gradient(top, #3a9bee, #e4f3ff 62%);
 }
 
-.orange {
+.orange #wrap {
   background: #ffeedf url(../img/cross.png);
   background: url(../img/pixels.png) repeat-x, url(../img/cross.png), -moz-linear-gradient(top, #f48e33, #ffeedf 62%);
   background: url(../img/pixels.png) repeat-x, url(../img/cross.png), -ms-linear-gradient(top, #f48e33, #ffeedf 62%);
@@ -97,7 +108,7 @@ body {
   background: url(../img/pixels.png) repeat-x, url(../img/cross.png), linear-gradient(top, #f48e33, #ffeedf 62%);
 }
 
-.purple {
+.purple #wrap {
   background: #f6e7ff url(../img/cross.png);
   background: url(../img/pixels.png) repeat-x, url(../img/cross.png), -moz-linear-gradient(top, #c387e9, #f6e7ff 62%);
   background: url(../img/pixels.png) repeat-x, url(../img/cross.png), -ms-linear-gradient(top, #c387e9, #f6e7ff 62%);
@@ -123,6 +134,94 @@ html.ready #home .container {
   -o-transition: all 1s ease-in-out;
   -ms-transition: all 1s ease-in-out;
   transition: all 1s ease-in-out;
+}
+
+/* Footer
+--------------------------------------------- */
+
+body > footer {
+  overflow: visible;
+  padding: 60px 0;
+  color: #e9e9e9;
+  line-height: 1.2;
+  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.8);
+  background: #343434 url(../img/dot.png);
+  -webkit-box-shadow: inset 0 1px 10px rgba(0, 0, 0, 0.6);
+  -moz-box-shadow: inset 0 1px 10px rgba(0, 0, 0, 0.6);
+  box-shadow: inset 0 1px 10px rgba(0, 0, 0, 0.6);
+  
+  /* sticky footer */
+  position: relative;
+	margin-top: -280px; /* negative value of footer height */
+	height: 160px;
+	clear:both;
+}
+
+/* Columns */
+
+body > footer .col {
+  float: left;
+  font-size: 15px;
+}
+
+body > footer .col:nth-child(1) {
+  width: 305px;
+}
+
+body > footer .col:nth-child(2) {
+  width: 200px;
+  margin: 0px 85px 0px 85px
+}
+
+body > footer .col:nth-child(3) {
+  width: 285px;
+}
+
+/* Logo */
+
+body > footer .col:nth-child(1) > a {
+  display: inline-block;
+  margin-bottom: 28px;
+}
+
+/* Headers */
+
+body > footer h1,
+body > footer h2 {
+  margin-bottom: 10px;
+  font-weight: bold;
+  font-size: 15px;
+}
+
+/* Nav */
+
+body > footer ul {
+  overflow: hidden;
+  margin-bottom: 25px;
+  margin-top: 13px;
+}
+
+body > footer li {
+  float: left;
+  margin-top: 5px;
+}
+
+body > footer nav li {
+  width: 100px;
+  margin-top: 5px;
+}
+
+body > footer .social li:nth-child(2) {
+  margin: 5px 8px 0 8px
+}
+
+body > footer .social li:nth-child(3) {
+  width: 160px;
+}
+
+body > footer .social li:nth-child(3) img {
+  float: left;
+  margin-right: 7px;
 }
 
 b,
@@ -757,10 +856,10 @@ html.ready #home [role="main"] > div {
 
 #tabs {
   margin-bottom: 0;
-  border-bottom: 0;
-  -webkit-border-radius: 4px 4px 0 0;
-  -moz-border-radius: 4px 4px 0 0;
-  border-radius: 4px 4px 0 0;
+/*  border-bottom: 0;*/
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
 }
 
 #tabs nav {
@@ -2518,86 +2617,4 @@ html.ready #community .visible #map a {
 
 #search #tabs nav li:first-child {
 	margin-left: 0;
-}
-
-/* Footer
---------------------------------------------- */
-
-body > footer {
-  overflow: hidden;
-  padding: 60px 0;
-  color: #e9e9e9;
-  line-height: 1.2;
-  text-shadow: 0 1px 0 rgba(0, 0, 0, 0.8);
-  background: #343434 url(../img/dot.png);
-  -webkit-box-shadow: inset 0 1px 10px rgba(0, 0, 0, 0.6);
-  -moz-box-shadow: inset 0 1px 10px rgba(0, 0, 0, 0.6);
-  box-shadow: inset 0 1px 10px rgba(0, 0, 0, 0.6);
-}
-
-/* Columns */
-
-body > footer .col {
-  float: left;
-  font-size: 15px;
-}
-
-body > footer .col:nth-child(1) {
-  width: 305px;
-}
-
-body > footer .col:nth-child(2) {
-  width: 200px;
-  margin: 0px 85px 0px 85px
-}
-
-body > footer .col:nth-child(3) {
-  width: 285px;
-}
-
-/* Logo */
-
-body > footer .col:nth-child(1) > a {
-  display: inline-block;
-  margin-bottom: 28px;
-}
-
-/* Headers */
-
-body > footer h1,
-body > footer h2 {
-  margin-bottom: 10px;
-  font-weight: bold;
-  font-size: 15px;
-}
-
-/* Nav */
-
-body > footer ul {
-  overflow: hidden;
-  margin-bottom: 25px;
-  margin-top: 13px;
-}
-
-body > footer li {
-  float: left;
-  margin-top: 5px;
-}
-
-body > footer nav li {
-  width: 100px;
-  margin-top: 5px;
-}
-
-body > footer .social li:nth-child(2) {
-  margin: 5px 8px 0 8px
-}
-
-body > footer .social li:nth-child(3) {
-  width: 160px;
-}
-
-body > footer .social li:nth-child(3) img {
-  float: left;
-  margin-right: 7px;
 }
